# nodecog

./: .gitignore  .gitmodules  COGNITIVE_SYNERGY_STARTER_COMPLETE.md  DEVELOPMENT_ROADMAP.md  KERNEL_FUNCTION_MANIFEST.md  KERNEL_INTEGRATION_GUIDE.md  KERNEL_STATUS_REPORT.md  PHASE0_PROGRESS_REPORT.md  ROADMAP_DOCUMENTATION_INDEX.md  ROADMAP_EXECUTIVE_SUMMARY.md  node.gyp
.github/agents/: nodecog.md
.github/agents/nodecog/: README.md  api-reference.md  architecture.md  cognitive-features.md  development-roadmap.md  kernel-layer.md
examples/cognitive-synergy-starter/: CMakeLists.txt  README.md  package.json
examples/cognitive-synergy-starter/docs/: API.md  ARCHITECTURE.md  INTEGRATION.md
examples/cognitive-synergy-starter/examples/: attention.js  basic.js  multi-isolate.js  nodespace.js
examples/cognitive-synergy-starter/lib/: cognitive_api.js  loader.mjs
examples/cognitive-synergy-starter/src/: cognitive_platform.cc  cognitive_platform.h  demo.cc  embedder.cc
src/: kern_README.md  kern_boot.cc  kern_boot.h  kern_hypergraph_fs.cc  kern_hypergraph_fs.h  kern_scheduler.cc  kern_scheduler.h
test/kernel/: Makefile  test_kern_boot  test_kern_boot.cc  uv_stub.c
